// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Wrapper should Render 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <img
      alt="logo"
      className={undefined}
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
</div>
`;

exports[`Storyshots DisplayStars with text 1`] = `
<div>
  <p>
     Things!
  </p>
  <button
    className={undefined}
    onClick={[Function]}
  >
    Increase
  </button>
  <button
    className={undefined}
    onClick={[Function]}
  >
    Decrease
  </button>
</div>
`;

exports[`Storyshots DisplayStarsContainer with stars 1`] = `
<div>
  <p>
    0
     Things!
  </p>
  <button
    className={undefined}
    onClick={[Function]}
  >
    Increase
  </button>
  <button
    className={undefined}
    onClick={[Function]}
  >
    Decrease
  </button>
</div>
`;

exports[`Storyshots Homepage should Render 1`] = `
<div>
  <h1>
    This is the Homepage
  </h1>
  <div>
    <p>
      0
       Things!
    </p>
    <button
      className={undefined}
      onClick={[Function]}
    >
      Increase
    </button>
    <button
      className={undefined}
      onClick={[Function]}
    >
      Decrease
    </button>
  </div>
</div>
`;
